--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -3,3 +3,17 @@ spring:
         view:
             prefix: /WEB-INF/views/jsp/
             suffix: .jsp
+    datasource:
+        hikari:
+            connection-timeout: 20000
+            maximum-pool-size: 5
+        url: jdbc:h2:mem:testdb
+        driver-class-name: org.h2.Driver
+        username: sa
+        password:
+    jpa:
+        database-platform: org.hibernate.dialect.H2Dialect
+    h2:
+        console:
+            enabled: true
+            path: /h2-console
