--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 			<version>2.3.5.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
