--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -7,7 +7,7 @@ spring:
         hikari:
             connection-timeout: 20000
             maximum-pool-size: 5
-        url: jdbc:h2:mem:testdb
+        url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
         driver-class-name: org.h2.Driver
         username: sa
         password:
