--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -7,13 +7,11 @@ spring:
         hikari:
             connection-timeout: 20000
             maximum-pool-size: 5
-        url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
-        driver-class-name: org.h2.Driver
-        username: sa
+        url: jdbc:postgresql://db:5432/spring_mvc # you can override this when running on the command line by using the argument --spring.datasource.url=<your jdbc connection>
+        driver-class-name: org.postgresql.Driver
+        username: postgres
         password:
     jpa:
-        database-platform: org.hibernate.dialect.H2Dialect
-    h2:
-        console:
-            enabled: true
-            path: /h2-console
+        database-platform: org.hibernate.dialect.PostgreSQL95Dialect
+        hibernate:
+            ddl-auto: create
